grapes.yml
apiVersion: v1
kind: Service
metadata:
  name: grapes-source
  labels:
    app: grapes-source
    group: grapes
spec:
  selector:
    app: grapes-source
    group: grapes
  ports:
  - name: web
    port: 80
    targetPort: web
