kafka.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-hs
  labels:
    app: kafka
spec:
  ports:
  - name: broker
    targetPort: broker
    port: 9092
  clusterIP: None
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka-hs
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: kafka
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - kafka-hs
              topologyKey: "kubernetes.io/hostname"
      volumes:
      - name: config
        configMap:
          name: kafka-config
      containers:
      - name: kubernetes-kafka
        imagePullPolicy: Always
        image: "maliksalman/kubernetes-kafka:1.0.0"
        resources:
          requests:
            memory: "500Mi"
            cpu: "0.25"
        ports:
        - containerPort: 9092
          name: broker
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - name: logdir
          mountPath: /var/kafka
        - name: config
          mountPath: /usr/etc/kafka
          readOnly: true
  volumeClaimTemplates:
  - metadata:
      name: logdir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
