nginx-np-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-np
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
